Seguir repaso desde el ambito de aplicacion de la investigacion

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -25,14 +25,14 @@ Personally, I think it does help, that it makes a beneficial difference, but the
 
 %------------------------------------------------------------------------- 
 
-Las competencias genéricas son las habilidades que los profesionales deben ser capaces de desempeñar independientemente de su especialización. Habilidades como el trabajo en equipo, la comunicación interpersonal, la capacidad para resolver problemas, la creatividad o el liderazgo, entre otras, son competencias que las empresas demandan hoy en día en los nuevos titulados, además de las competencias específicas que se les supone por la titulación que hayan terminado. En este contexto, los profesores deben integrar estas competencias en sus itinearios curriculares y en sus asignaturas, tanto en las clases tradicionales como en los entornos virtuales. Y por supuesto, deben fijar mecanismos no sólo para el desarrollo de estas competencias, sino también para la evaluación de las mismas.
+Las competencias genéricas son las habilidades que los profesionales deben ser capaces de desempeñar independientemente de su especialización. Habilidades como el trabajo en equipo, la comunicación interpersonal, la capacidad para resolver problemas, la creatividad o el liderazgo, entre otras, son competencias que las empresas demandan hoy en día en los nuevos titulados, además de las competencias específicas que se les supone por la titulación que hayan terminado. Desde un punto de vista formativo, los profesores deben integrar estas competencias en sus asignaturas, tanto en las clases tradicionales como en los entornos virtuales. Y por supuesto, deben fijar mecanismos no sólo para el desarrollo de estas competencias, sino también para la evaluación de las mismas.
 
 Los \emph{entornos virtuales de aprendizaje} (EVA o, del inglés, VLE, virtual learning environment) almacenan información de estudiantes, profesores, cursos, tareas, trabajos, etc. Estos elementos se relacionan y configuran para ofrecer al usuario una experiencia de curso virtual. Estos cursos están en auge hoy en día, siendo el soporte virtual de las clases presenciales o incluso siendo el único medio donde unas clases o un curso se imparten. Las clases virtuales presentan numerosas ventajas con respecto a las clases tradicionales. Por un lado se elimina la limitación geográfica que tienen las clases tradicionales, y por otro lado la oferta y variedad de cursos ofrecidos siempre será mayor. Además, para los estudiantes presentan otras ventajas fundamentales: en primer lugar la flexibilidad de horario, permitiéndoles compatibilizar los estudios con una vida laboral sin renunciar a crecer profesionalmente; y en segundo lugar, les permite estar en contacto permante con otros estudiantes y profesores mediante diferentes herramientas (foros, chats, ... etc.)~\cite{alAjlan:2008}.
 
 % VENTAJAS: http://oedb.org/ilibrarian/10-advantages-to-taking-online-classes/
 Pero además de todo lo anterior, un EVA almacena una gran cantidad de información que adecuadamente analizada y presentada podria ser de gran utilidad para los profesores para monitorizar el trabajo de sus estudiantes~\cite{podgorelec:2011}. Cada archivo, cada acceso o cada tarea realizada por cada estudiante queda registrada en el sistema. Por desgracia, esta información no esta siempre a disposición del profesor, y si lo está, require un filtrado para poder ser utilizada~\cite{Chebil:2012}. 
 
-En este capítulo se va a establecer la base teórica sobre la que se sustenta esta tesis doctoral. Se comenzará definiendo las preguntas de investigación, a las que se tratará de dar respuesta mediante un \emph{estudio de mapeo sistemático} (SMS, del inglés, Systematic Mapping Study). Un SMS, es una amplia revisión de los estudios primarios en un área específica cuyo objetivo es identificar alguna evidencia sobre el tema. Este estudio se basa en las directrices publicadas en la metodología propuesta por Kitchenham \cite{Kitchenham:2010}. Esta metodología describe cómo se deben planificar, ejecutar y presentar los resultados de una revisión de la literatura en ingeniería del software. Para este trabajo se ha utilizado la propuesta de Petersen \cite{Petersen:2008}.
+En este capítulo se va a establecer la base teórica sobre la que se sustenta esta tesis doctoral. Se comenzará definiendo las preguntas de investigación, a las que se tratará de dar respuesta mediante un \emph{estudio de mapeo sistemático} (SMS, del inglés, Systematic Mapping Study). Un SMS, es una amplia revisión de los estudios primarios en un área específica cuyo objetivo es identificar alguna evidencia sobre el tema.
 
 \section{Preguntas de investigación}
 
@@ -47,6 +47,8 @@ Por tanto, partiendo del objetivo principal, se definen las siguiente preguntas 
 \end{itemize}
 
 \section{Metodología}
+
+Un SMS es una amplia revisión de los estudios primarios en un área específica cuyo objetivo es identificar alguna evidencia sobre el tema. Este estudio se basa en las directrices publicadas en la metodología propuesta por Kitchenham \cite{Kitchenham:2010}. Esta metodología describe cómo se deben planificar, ejecutar y presentar los resultados de una revisión de la literatura en ingeniería del software. Para este trabajo se ha utilizado la propuesta de Petersen \cite{Petersen:2008}.
 
 \subsection{Protocolo de revisión}
 
@@ -72,24 +74,24 @@ Para encontrar la bibliografía, se realizarán consultas en las siguientes bibl
 
 \subsection{Términos de búsqueda}
 \label{sec:TerminosBusqueda}
-Existen muchos términos que pueden utilizarse para referirse a la evaluación de competencias genéricas de manera automatizada o asistida. Por la naturaleza de nuestro trabajo, debemos contemplar siempre en las palabras de búsqueda los términos \emph{assessment} y \emph{generic skills} o \emph{generic competences}. Realizar la búsqueda por el término \emph{Assessment of generic skills} o \emph{assessing generic skills} nos planteaba la primera problemática, y es que el número de artículos devueltos era muy reducido. Por ejemplo, en la \emph{Wiley Online Library} la búsqueda del término exacto \emph{generic skills assessment} devolvió un único resultado. Sin embargo, debilitar la búsqueda con términos como \emph{generic competences} o \emph{generic skills} junto con la palabra \emph{assessment} daba un número de resultados muy elevado. En la misma biblioteca, buscar por los términos \emph{``generic skills`` and student and assessment} nos devolvía 609 resultados. En primera instancia se probó añadiendo términos como  \emph{E-Learning}, \emph{computer-assisted} o \emph{mobile learning}. Sin embargo, incluir términos de este tipo reducían también drásticamente el número de resultados obtenidos en la búsqueda, no llegando a obtenerse bibliografía más significativa que si no se incluyen. Por tanto, a tenor de las pruebas se decide eliminar de la búsqueda ese tipo de términos. La combinación de los términos de búsqueda empleados en la investigación, así como a los motores de búsqueda que fueron aplicados en cada una pueden comprobarse en la tabla \ref{tab:ResumenBusqueda}.
+Existen muchos términos que pueden utilizarse para referirse a la evaluación de competencias genéricas de manera automatizada o asistida. Por la naturaleza de nuestro trabajo, debemos contemplar siempre en las palabras de búsqueda los términos \emph{assessment} y \emph{generic skills} o \emph{generic competences}. Realizar la búsqueda por el término \emph{Assessment of generic skills} o \emph{assessing generic skills} nos planteaba la primera problemática, y es que el número de artículos devueltos era muy reducido. Por ejemplo, en la \emph{Wiley Online Library} la búsqueda del término exacto \emph{generic skills assessment} devolvió un único resultado. Sin embargo, debilitar la búsqueda con términos como \emph{generic competences} o \emph{generic skills} junto con la palabra \emph{assessment} daba un número de resultados muy elevado. En la misma biblioteca, buscar por los términos \emph{``generic skills`` and student and assessment} nos devolvía 609 resultados. En primera instancia se probó añadiendo términos como  \emph{E-Learning}, \emph{computer-assisted} o \emph{mobile learning}. Sin embargo, incluir términos de este tipo reducían también drásticamente el número de resultados obtenidos en la búsqueda, no llegando a obtenerse bibliografía más significativa que si no se incluyen. Por tanto, a tenor de las pruebas se decide eliminar de la búsqueda ese tipo de términos. La combinación de los términos de búsqueda empleados en la investigación, así como a los motores de búsqueda que fueron aplicados en cada una pueden comprobarse en la tabla \ref{tab:ResumenBusqueda}. Los términos de búsqueda se han empleado en todos los campos (título, resumen, texto, etc.).
 
 %Por otro lado, sí se incluyen acrónimos de diferentes entornos virtuales relacionados con las TEL, como son: \emph{TEL}, \emph{LMS}, \emph{ICT} (Information and Communications Technology), \emph{CBI} (Content-Based Instruction). Y tras varias pruebas, se descartan también de la búsqueda términos como `\emph{ICE} (Integrated Collaboration Environment) y \emph{CSCL} (Computer Supported Collaborative Learning), debido a que son términos que en conjunción con los términos principales de nuestra búsqueda no suelen aparecer y los resultados de estas búsquedas eran nulos. Un ejemplo de esto se refleja en una de las consultas realizadas en \emph{Scopus}, dónde los términos \emph{((``student assessment`` OR ``assessment of students``) AND (``generic skills`` OR ``generic competences``)) AND CSCL} no devolvían ningún resultado. 
 
 \begin{table}
   \begin{center}
-  \begin{tabular}{| p{3cm} | p{5cm} | p{2cm} | p{3cm} |}
+  \begin{tabular}{| p{2.8cm} | p{5.5cm} | p{3cm} | p{0.8cm} |}
     \hline
-    SOURCE & SEARCH TERMS & SEARCH SCOPE & PUBLICATION\\
+    SOURCE & SEARCH TERMS & PUBLICATION & NUM \\
     \hline
     \hline
-    Web of Science & ((``generic competences`` OR ``generic skills``) AND assessment) & in All Fields & Journals\\
+    Web of Science & ((``generic competences`` OR ``generic skills``) AND assessment) & Journals & 138 \\
     \hline
-    Wiley Online Library & ``generic competences`` AND assessment & in All Fields & Journals and Conferences\\
+    Wiley Online Library & ``generic competences`` AND assessment & Journals and Conferences & 50 \\
     \hline
-    Science Direct & (``generic competences``) AND assessment) & in All Fields & Journals\\
+    Science Direct & (``generic competences``) AND assessment) & Journals & 71 \\
     \hline
-    IEEE Digital Library (Xplore) & ((``generic competences``) AND assessment) & in All Fields & Journals and Conferences\\
+    IEEE Digital Library (Xplore) & ((``generic competences``) AND assessment) & Journals and Conferences & 54 \\
     \hline
 
 %    Wiley Online Library & assessment AND ``generic competences`` OR ``generic skills`` AND (TEL OR ICT OR CBI) & in All Fields\\
@@ -108,13 +110,13 @@ Existen muchos términos que pueden utilizarse para referirse a la evaluación d
 
 \subsection{Criterios de selección}
 \label{sec:CriteriosBusqueda}
-Para determinar si un trabajo debía formar parte de nuestra selección de estudios primarios se leyó tanto el título, como el resumen y las palabras clave. En ocasiones esto no fue suficiente, siendo necesario complementar la lectura anterior con una somera la lectura del artículo completo y más detallada de la introducción y las conclusiones.
+Para determinar si un trabajo debía formar parte de nuestra selección de estudios primarios se leyó el título, el resumen y las palabras clave. Cuando ésto no era suficiente se complementaba la lectura anterior con una somera la lectura del artículo completo, y más detallada de la introducción y las conclusiones.
 Nuestra búsqueda se centró en la localización de los trabajos que, habiendo sido obtenidos en el proceso de búsqueda anterior, vayan en línea con nuestro estudio y puedan ayudarnos a resolver las preguntas de investigación. Para ello, se realizó la proyección de los trabajos seleccionados utilizando los siguientes criterios de exclusión:
 \begin{itemize}
-\item Off Topic: trabajo no relacionado directamente con nuestra investigación. Son trabajos, que aún satisfaciendo los criterios de búsqueda porque de alguna forma se mencionan en el texto, su contribución no está directamente relacionada con la temática de este estudio. La mayoría de artículos descartados en este bloque consisten en trabajos que indican que trabajan o mejoran alguna competencia genérica en los estudiantes, pero no mencionan si después el desempeño en la competencia se mide de alguna forma.
+\item Off Topic: trabajo no relacionado directamente con nuestra investigación. Son trabajos que satisfacen los criterios de búsqueda, pero cuya contribución no está directamente relacionada con la temática de este estudio. La mayoría de artículos descartados en este bloque consisten en experiencias que trabajan o mejoran alguna competencia genérica en los estudiantes, pero no mencionan si después el desempeño en la competencia se mide de alguna forma, y si por el contrario sí realizan una medición, lo hacen sin apoyo alguno de la tecnología.
 \item Unsupported Language: trabajo escrito en un lenguaje diferente al inglés o español. La mayoría de los textos son en inglés, por lo que este criterio de descarte apenas es utilizado.
 \item Duplicated: trabajos cuya contribución principal está recogida en otros trabajos ya incluidos. 
-\item Unread: trabajo que no ha podido ser leído. Son textos que no han sido leídos al no estar disponible para su lectura en las bibliotecas digitales a las que se tiene acceso desde la Universidad de Cádiz ni se ha podido encontrar por otros medios (petición por correo a los autores, búsqueda en otros repositorios de Internet, etc).
+\item Unread: trabajo que no ha podido ser leído. Son textos que no han sido leídos al no estar disponible en las bibliotecas digitales a las que se tiene acceso desde la Universidad de Cádiz ni se ha podido encontrar por otros medios (petición por correo a los autores, búsqueda en otros repositorios de Internet, etc).
 \end{itemize}
 
 \subsection{Esquema para la extracción de datos}
