Cambios comentados Juanma 1

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -39,7 +39,7 @@ En este capítulo se va a establecer la base teórica sobre la que se sustenta e
 El objetivo principal de esta tesis doctoral es:
 
 \bigskip
-\textbf{\emph{Evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje.}}
+\textbf{\emph{Proponer un método para evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje.}}
 \bigskip
 
 Para abordar este objetivo ha de conocerse primero el estado del arte, dando respuesta para ello a diferentes preguntas de investigación. Las preguntas habrán de dar repuesta a interrogantes tales cómo cuáles son las competencias genéricas que se han evaluado haciendo uso de la informática, así cómo qué métodos se han utilizado y si se están usando para este fin los registros de actividad de los entornos virtuales.
@@ -157,12 +157,12 @@ Además de las clasificaciones anteriores, es necesario recoger más informació
 \begin{itemize}
 \item Evaluación del profesor (\emph{teacher assessment}): el profesor evalúa el desempeño de los estudiantes en una o varias competencias genéricas de manera asistida o semi-asistida por el ordenador.
 \item Evaluación entre iguales y autoevaluación (\emph{peer and self-assessment}): uno de los problemas con los que se encuentran los profesores es la escalabilidad de la tarea de evaluación de competencias cuando el grupo de alumnos es grande. En estos trabajos, con el apoyo de la tecnología delegan parte o todo el proceso de evaluación en los estudiantes mediante la autoevaluación o evaluación entre iguales.
-\item Cuestionarios (\emph{tests or questionaries}): en este conjunto de trabajos que automatizan los procesos de evaluación mediante el uso de tests sicológicos orientados a alguna competencia en particular.
-\item Herramientas de evaluación automática (\emph{automatic assessment tools}): en esta rama se recogen trabajos que automatizan el proceso de evaluación de competencias genéricas.
+\item Cuestionarios (\emph{questionaries}): en este conjunto de trabajos que automatizan los procesos de evaluación mediante el uso de tests sicológicos orientados a alguna competencia en particular.
+\item Herramientas de evaluación automática (\emph{automatic assessment tools}): en esta rama se recogen trabajos que automatizan el proceso de evaluación de competencias.
 \end{itemize}
 
 \subsection{Visualización y análisis de los datos}
-Tras obtener los estudios primarios, hay una etapa de análisis, donde se resumen los datos extraídos para así responder a las preguntas de investigación planteadas. El análisis de los resultados se centra en el estudio de las publicaciones para cada categoría y por lo tanto, la determinación del grado de cobertura de cada categoría. Esta información generalmente se resume en tablas y/o gráficos. Otro método utilizado en nuestro estudio es la combinación de diferentes categorías (por ejemplo, el ámbito de investigación contra el tipo contribución) y mostrarlos en un mapa sistemático en la forma de un gráfico de burbujas.
+Tras obtener los estudios primarios, hay una etapa de análisis, donde se resumen los datos extraídos para así responder a las preguntas de investigación planteadas. El análisis de los resultados se centra en el estudio de las publicaciones para cada categoría y por lo tanto, en la determinación del grado de cobertura de cada categoría. Esta información generalmente se resume en tablas y gráficos. Otro método utilizado en nuestro estudio es la combinación de diferentes categorías (por ejemplo, el ámbito de investigación contra el tipo contribución) y su representación en un mapa sistemático en la forma de un gráfico de burbujas.
 En el siguiente capítulo se mostrarán los resultados obtenidos.
 
 \section{Resultados}
@@ -228,7 +228,9 @@ En total se recopilaron 313 trabajos para ser revisados. El número de estudios 
 
 \subsection{Extracción de los datos}
 
-Aunque las tecnologías entraron a formar parte de la vida académica hace ya varios años, no es hasta 2010, con la tercera generación de herramientas de medición educativa bajo el marco de la Comisión Europea (\emph{Generation 3: continuous integrated assessment}) \cite{Redecker:2013}, cuando se comienzan a integrar la evaluación en las herramientas de aprendizaje. Entonces conceptos como \emph{Data Mining and analysis}, \emph{Behavioural tracking} and \emph{Learning analytics} comienzan a usarse. Tanto en la tabla \ref{tab:ResumenAniosResultados} como en la figura \ref{fig:PublicacionesAnuales} puede verse la distribución de la producción de la selección primaria a lo largo de los años. Casi la mayor parte de los seleccionados se pueden localizar en los últimos años, véase como 37 de estos trabajos (75,51\%) fue publicado entre 2010 y 2015.
+Aunque las tecnologías entraron a formar parte de la vida académica hace ya varios años, no es hasta 2010, con la tercera generación de herramientas de medición educativa bajo el marco de la Comisión Europea (\emph{Generation 3: continuous integrated assessment}) \cite{Redecker:2013}, cuando se comienzan a integrar la evaluación en las herramientas de aprendizaje. Entonces conceptos como \emph{Data Mining and analysis}, \emph{Behavioural tracking} and \emph{Learning analytics} comienzan a usarse. Tanto en la tabla \ref{tab:ResumenAniosResultados} como en la figura \ref{fig:PublicacionesAnuales} puede verse la distribución de la producción de la selección primaria a lo largo de los años. Casi la mayor parte de los seleccionados se pueden localizar en los últimos años. Véase como 37 de estos trabajos (75,51\%) fueron publicado entre 2010 y 2015.
+
+% Quitada coma tras véase (, véase) por mal uso. Estará mejor un punto y seguido?
 
 \begin{table}
   \begin{center}
@@ -273,7 +275,7 @@ Aunque las tecnologías entraron a formar parte de la vida académica hace ya va
 
 \begin{figure}
   \begin{center}
-    \includegraphics[scale=0.5]{PublicacionesAnuales.png}
+    \includegraphics[scale=0.4]{PublicacionesAnuales.png}
   \end{center}
   \caption{Distribución de las publicaciones por años}
   \label{fig:PublicacionesAnuales}
