--- a/dissertation.tex
+++ b/dissertation.tex
@@ -74,6 +74,7 @@
 \begin{document}
 
 \selectlanguage{spanish}
+\MejorarTraducciones
 
 % sets line spacing
 \renewcommand\baselinestretch{1.2}
@@ -118,7 +119,7 @@
 
 % As abstract contains various languages we set the main language again
 \selectlanguage{spanish}
-
+\MejorarTraducciones
 
 %: ----------------------- contents ------------------------
 
