Evaluacion entre iguales y auto...

--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -802,6 +802,40 @@ author = "Leslie Borjas De Xena"
  pages = {792--805}
 } 
 
+% Listado de competencias
+
+@article{bernheim2010educacion,
+  title={La educaci{\'o}n permanente y su impacto en la educaci{\'o}n superior},
+  author={Bernheim, Carlos T{\"u}nnermann},
+  journal={Revista Iberoamericana de Educaci{\'o}n Superior},
+  volume={1},
+  number={1},
+  year={2010}
+}
+
+@book{fisher2011critical,
+  title={Critical thinking: An introduction},
+  author={Fisher, Alec},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
+@misc{parker1990teamwork,
+  title={WHAT IS TEAMWORK?},
+  author={Parker, Glenn},
+  year={1990},
+  publisher={Citeseer}
+}
+
+@book{gass2013second,
+  title={Second language acquisition: An introductory course},
+  author={Gass, Susan M},
+  year={2013},
+  publisher={Routledge}
+}
+
+% Fin listado de competencias
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
